<resources>
    <string name="app_name">腾讯连连</string>
    <string name="main_tab_1">首页</string>
    <string name="main_tab_2">场景</string>
    <string name="main_tab_3">我的</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="error">错误</string>
    <string name="next">下一步</string>
    <string name="resend">重新发送</string>
    <string name="finish">完成</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="confirm">确定</string>
    <string name="verify">确认</string>
    <string name="bind">绑定</string>
    <string name="commit">提交</string>
    <string name="delete">删除</string>
    <string name="modify_fail">修改失败</string>
    <string name="save">保存</string>
    <string name="refuse">拒绝</string>
    <string name="invite">接受</string>
    <string name="exit">退出</string>
    <string name="agree">同意</string>
    <string name="back">返回</string>
    <string name="back_home">返回首页</string>
    <string name="q_feedback">问题反馈</string>
    <string name="wechat_login">微信登录</string>
    <string name="email_login">邮箱登录</string>
    <string name="phone_login">手机登录</string>
    <string name="default_country">中国大陆</string>
    <string name="email_forgot">使用邮箱账号</string>
    <string name="phone_forgot">使用手机账号</string>
    <string name="email_to_register">使用邮箱注册</string>
    <string name="mobile_phone_number_to_register">使用手机注册</string>
    <string name="mobile_phone_register">手机注册</string>
    <string name="email_register">邮箱注册</string>
    <string name="register_agree_1">同意并遵守腾讯云</string>
    <string name="register_agree_2">用户协议</string>
    <string name="register_agree_3">及</string>
    <string name="register_agree_4">隐私政策</string>
    <string name="register_get_code">获取验证码</string>
    <string name="get_mobile_code_sent">验证码已经发送到您的手机:</string>
    <string name="get_email_code_sent">验证码已经发送到您的邮箱:</string>
    <string name="not_wechat_client">未安装微信客户端</string>
    <string name="cancel_wechat">取消授权</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="register">注册</string>
    <string name="register_account">注册账号</string>
    <string name="account">账号</string>
    <string name="get_sms_code">手机验证码</string>
    <string name="verification_code">验证码</string>
    <string name="input_verification_code">输入验证码</string>
    <string name="mobile_number">手机号码</string>
    <string name="email_address">邮箱地址</string>
    <string name="password">密码</string>
    <string name="new_password_equals_old">新密码不能与旧密码相同</string>
    <string name="verify_password">再次输入密码</string>
    <string name="forgot_password">忘记密码</string>
    <string name="find_bank_the_password">找回密码</string>
    <string name="set_password">设置密码</string>
    <string name="set_password_success">密码设置成功</string>
    <string name="country_code">选择国家和地区</string>
    <string name="hot_country">热门国家和地区</string>
    <string name="copyright">Copyright @ 2013&#8211;2020 Tencent Cloud.All Right Reserved.\n腾讯云 版权所有</string>
    <string name="message_notification">消息通知</string>
    <string name="help_center">帮助中心</string>
    <string name="feedback">意见反馈</string>
    <string name="about_me">关于我们</string>
    <string name="personal_info">个人信息</string>
    <string name="set_avatar">设置头像</string>
    <string name="take_photo">拍照</string>
    <string name="select_local_album">从手机相册选取</string>
    <string name="nick">昵称</string>
    <string name="telephone_number">电话号码</string>
    <string name="modify_password">修改密码</string>
    <string name="modify_nick">修改昵称</string>
    <string name="bind_phone">手机绑定</string>
    <string name="old_password">旧密码</string>
    <string name="please_bind_title">请先绑定手机号</string>
    <string name="please_bind_content">当前未绑定手机号，无法进行修改密码</string>
    <string name="empty_message">暂无消息</string>
    <string name="max_word_length">请填写10个字以上文字以便我们更好的帮助您</string>
    <string name="print_picture">相关截图</string>
    <string name="contact_way">输入有效联系方式以便开发者联系您（选填）</string>
    <string name="verification_code_null">请输入验证码</string>
    <string name="verification_code_invalid">验证码格式不正确</string>
    <string name="toast_register_agreement">请阅读并同意用户协议和隐私政策</string>
    <string name="login_success">登录成功</string>
    <string name="bind_phone_success">手机号绑定成功</string>
    <string name="my_devices">我的设备</string>
    <string name="add_device">添加设备</string>
    <string name="share_device">共享的设备</string>
    <string name="scan_add">扫码添加</string>
    <string name="smart_config">智能配网</string>
    <string name="not_network">未连接</string>
    <string name="connecting_to_wifi">请连接WIFI</string>
    <string name="soft_ap">自助配网</string>
    <string name="message">消息</string>
    <string name="connection">连接中</string>
    <string name="connect_success">连接成功</string>
    <string name="connect_fail">连接失败</string>
    <string name="add_new_device">继续添加新设备</string>
    <string name="back_to_home_page">返回首页</string>
    <string name="connect_again">按步骤重试</string>
    <string name="tab_connect_way">切换配网方式</string>
    <string name="see_more_fail_cause">查看更多失败原因</string>
    <string name="connect_step">1、检查设备是否通电，并按照指引进入配网模式\n
2、检查WIFI是否正常（暂时只支持2.4G路由器）\n
3、检查WIFI密码是否错误
</string>
    <string name="no_family_and_add">当前暂无家庭，点击按钮进行添加</string>
    <string name="no_room_and_add">当前暂无房间，点击按钮进行添加</string>
    <string name="no_room">没有可选的房间</string>
    <string name="no_device_and_add">当前暂无设备，点击按钮进行添加</string>
    <string name="no_add_permission">无添加权限</string>
    <string name="smart_config_first">将设备设置为智能配网模式</string>
    <string name="smart_config_first_hint">若指示灯已经在快闪，可跳过该步骤。</string>
    <string name="smart_config_first_hint2">1.接通设备电源。\n2.长按复位键（开关）5秒。\n3.指示灯进入快闪状态。</string>
    <string name="connect_toast">请将设备与手机尽量靠近</string>
    <string name="smart_config_first_title">提示灯在快闪</string>
    <string name="smart_config_second_title">连接WI-FI</string>
    <string name="smart_config_second">输入WI-FI密码</string>
    <string name="smart_config_second_hint">请输入手机连接Wi-Fi密码</string>
    <string name="smart_config_third_connect_progress">配网进度</string>
    <string name="soft_ap_first_title">将设备设置为自助配网模式</string>
    <string name="soft_ap_first_toast1">若指示灯已经在慢闪，可跳过该步骤。</string>
    <string name="soft_ap_first_toast">1.接通设备电源。\n2.长按复位键（开关）5秒，指示灯快闪时，在次长按复位键3秒。\n3.指示灯进入慢闪状态。</string>
    <string name="soft_ap_first_button">提示灯在慢闪</string>
    <string name="soft_ap_hotspot_set">将手机WIFI连接设备热点</string>
    <string name="soft_ap_hotspot_step_1">1.手机WIFI连接到如下图所示的设备热点</string>
    <string name="soft_ap_hotspot_step_2">2.返回APP,添加设备</string>
    <string name="soft_ap_connect_hotspot">连接设备热点</string>
    <string name="reconnect">重新连接</string>
    <string name="soft_ap_connect_confirm">连接正确，进入下一步</string>
    <string name="offline">离线</string>
    <string name="online">设备在线</string>
    <string name="device_alias_name">设备昵称</string>
    <string name="power_on">电源开关：开启</string>
    <string name="power_off">电源开关：关闭</string>
    <string name="on">开启</string>
    <string name="off">关闭</string>
    <string name="device_details">设备详情</string>
    <string name="remark_name">备注名称</string>
    <string name="device_name">设备名称</string>
    <string name="product_id">产品ID</string>
    <string name="local_manager">位置管理</string>
    <string name="device_info">设备信息</string>
    <string name="normal_problem">常见问题</string>
    <string name="no_device_share">暂未分享设备，点击按钮进行分享</string>
    <string name="add_device_share">添加分享</string>
    <string name="modify_alias_name">修改备注名称</string>
    <string name="delete_toast_title">确定要删除设备码？</string>
    <string name="delete_toast_content">删除后数据无法直接恢复</string>
    <string name="exit_toast_title">退出添加设备</string>
    <string name="exit_toast_content">当前正在添加设备，是否退出？</string>
    <string name="share_success">分享发送成功</string>
    <string name="factory_name">厂家名称</string>
    <string name="product_model">产品型号</string>
    <string name="mac_address">MAC地址</string>
    <string name="ip_address">IP地址</string>
    <string name="firmware_version">固件版本</string>
    <string name="cloud_timing">云端定时</string>
    <string name="add_timer">添加定时</string>
    <string name="modify_timer">修改定时</string>
    <string name="timer_name">定时名称</string>
    <string name="action_name">动作名称</string>
    <string name="repeat">重复</string>
    <string name="work_day">工作日</string>
    <string name="weekend">周末</string>
    <string name="device_action">设备动作</string>
    <string name="delete_action">删除动作</string>
    <string name="timing_name">名称设置</string>
    <string name="no_and_add_timer">当前暂无云端定时，点击按钮进行添加</string>
    <string name="every_sunday">每周日</string>
    <string name="every_monday">每周一</string>
    <string name="every_tuesday">每周二</string>
    <string name="every_wednesday">每周三</string>
    <string name="every_thursday">每周四</string>
    <string name="every_friday">每周五</string>
    <string name="every_saturday">每周六</string>
    <string name="device_share">设备分享</string>
    <string name="device_share_to_user">分享用户</string>
    <string name="share_user_list">分享用户列表</string>
    <string name="share_user_hint">设备已经单独分享给以下用户</string>
    <string name="family_manager">家庭管理</string>
    <string name="family_name">家庭名称</string>
    <string name="invite_family_member">邀请家庭成员</string>
    <string name="family_member">家庭成员</string>
    <string name="add_family">添加家庭</string>
    <string name="family_address">家庭位置</string>
    <string name="empty_family">请输入家庭名称</string>
    <string name="empty_room">请输入房间名称</string>
    <string name="add_room">添加房间</string>
    <string name="room_manager">房间管理</string>
    <string name="family_detail">家庭详情</string>
    <string name="delete_family">删除家庭</string>
    <string name="exit_family">退出家庭</string>
    <string name="invite_member">邀请成员</string>
    <string name="room_setting">房间设置</string>
    <string name="delete_room">删除房间</string>
    <string name="room_name">家庭名称</string>
    <string name="member_setting">成员设置</string>
    <string name="member_name">成员名称</string>
    <string name="member_role">角色</string>
    <string name="member_account">关联账号</string>
    <string name="role_owner">所有者</string>
    <string name="role_member">成员</string>
    <string name="delete_member">移除成员</string>
    <string name="invite_send_success">邀请发送成功</string>
    <string name="join_family_success">成功加入家庭</string>
    <string name="bind_device_success">成功绑定共享设备</string>
    <string name="toast_delete_family_title">您确定要删除该家庭吗？</string>
    <string name="toast_delete_family_content">删除家庭后，系统将清除所有的成员与家庭数据，该家庭下的设备也将被删除</string>
    <string name="toast_exit_family_title">您确定要退出该家庭吗？</string>
    <string name="toast_exit_family_content">退出家庭后，可重新接受邀请</string>
    <string name="toast_delete_room_title">您确定要删除该房间吗？</string>
    <string name="toast_delete_room_content">删除房间后，系统将清除房间数据，该房间下的设备也将被删除</string>
    <string name="toast_delete_member_title">您确定要删除该成员吗？</string>
    <string name="toast_delete_member_content">删除成员后，可重新邀请</string>
    <string name="toast_alias_length">昵称长度为1-20</string>
    <string name="delete_success">删除成功</string>
    <string name="device_offline">设备已离线</string>
    <string name="device_offline_check">请检查：\n
1.设备是否有电\n
2.设备连接的路由器是否正常工作，网络通畅\n
3.是否修改了路由器的名称或密码，可以尝试重新连接\n
4.设备是否与路由器距离果园、隔墙或有其他遮挡物</string>
    <string name="device">\t\t设备\t\t</string>
    <string name="family">\t\t家庭\t\t</string>
    <string name="notify">\t\t通知\t\t</string>
    <string name="scanned_devices">已发现如下设备</string>
    <string name="scanning_device">正在扫描附近设备</string>
    <string name="bluetooth_adapter_invalid">当前蓝牙适配器不可用</string>
    <string name="need_open_bluetooth">发现设备需开启手机蓝牙(10001)</string>
    <string name="scanning_retry">重试</string>
    <string name="connect">连接</string>
    <string name="all_device">全部</string>
    <string name="living_room">客厅</string>
    <string name="bedroom">卧室</string>
    <string name="kitchen">厨房</string>
    <string name="recommend">推荐</string>
</resources>