<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".activity.MessageActivity">

    <include
            android:id="@+id/menu_message"
            layout="@layout/menu_back_layout" />

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_message"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@+id/menu_message"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/blue_0052d9"
            app:tabIndicatorFullWidth="false"
            app:tabMaxWidth="0dp"
            app:tabMode="fixed">

        <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/device" />

        <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/family" />

        <com.google.android.material.tabs.TabItem
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/notify" />

    </com.google.android.material.tabs.TabLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_e6e6e6"
            app:layout_constraintTop_toBottomOf="@+id/tab_message" />

    <FrameLayout
            android:id="@+id/message_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab_message"/>

</androidx.constraintlayout.widget.ConstraintLayout>