<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.DeviceInfoActivity">

    <!--    返回键-->
    <include
            android:id="@+id/menu_device_info"
            layout="@layout/menu_back_layout" />

    <TextView
            android:id="@+id/tv_factory_name_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="120dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/factory_name"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/ts_18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/tv_factory_name_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:text="―"
            android:textColor="@color/gray_cccccc"
            android:textSize="@dimen/ts_16"
            app:layout_constraintBottom_toBottomOf="@+id/tv_factory_name_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_factory_name_title" />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/gray_F2F4F5"
            app:layout_constraintTop_toBottomOf="@+id/tv_factory_name_title" />

    <TextView
            android:id="@+id/tv_product_model_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/product_model"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/ts_18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_factory_name_title" />

    <TextView
            android:id="@+id/tv_product_model_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:text="―"
            android:textColor="@color/gray_cccccc"
            android:textSize="@dimen/ts_16"
            app:layout_constraintBottom_toBottomOf="@+id/tv_product_model_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_product_model_title" />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/gray_F2F4F5"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_model_title" />


    <TextView
            android:id="@+id/tv_mac_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/mac_address"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/ts_18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_model_title" />

    <TextView
            android:id="@+id/tv_mac_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:text="―"
            android:textColor="@color/gray_cccccc"
            android:textSize="@dimen/ts_16"
            app:layout_constraintBottom_toBottomOf="@+id/tv_mac_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_mac_title" />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/gray_F2F4F5"
            app:layout_constraintTop_toBottomOf="@+id/tv_mac_title" />

    <TextView
            android:id="@+id/tv_ip_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/ip_address"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/ts_18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mac_title" />

    <TextView
            android:id="@+id/tv_ip_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:text="―"
            android:textColor="@color/gray_cccccc"
            android:textSize="@dimen/ts_16"
            app:layout_constraintBottom_toBottomOf="@+id/tv_ip_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_ip_title" />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/gray_F2F4F5"
            app:layout_constraintTop_toBottomOf="@+id/tv_ip_title" />

    <TextView
            android:id="@+id/tv_firmware_title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/firmware_version"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/ts_18"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ip_title" />

    <TextView
            android:id="@+id/tv_firmware_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:gravity="end"
            android:maxLines="1"
            android:text="―"
            android:textColor="@color/gray_cccccc"
            android:textSize="@dimen/ts_16"
            app:layout_constraintBottom_toBottomOf="@+id/tv_firmware_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_firmware_title" />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/gray_F2F4F5"
            app:layout_constraintTop_toBottomOf="@+id/tv_firmware_title" />


</androidx.constraintlayout.widget.ConstraintLayout>